# loom

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  Dockerfile  PUNCHLIST.md  README.md  SECURITY.md  docker-compose.yml
backend/: .env.example  pyproject.toml  ruff.toml
backend/agents/: base.py  chain.py  changelog.py  chat.py  file_locks.py  memory.py  runner.py
backend/agents/loom/: archivist.py  scribe.py  sentinel.py  spider.py  spider_candidates.py  spider_linker.py  spider_lookup.py  spider_models.py  weaver.py  weaver_helpers.py  weaver_io.py  weaver_llm.py  weaver_prompts.py
backend/agents/shuttle/: custom.py  (+2 more)
backend/api/: exception_handlers.py  health.py  main.py  runtime.py
backend/core/: config.py  defaults.py  exceptions.py  graph.py  graph_state.py  note_index.py  notes.py  notes_helpers.py  platform.py  providers.py  rate_limit.py  tokens.py  vault.py  vault_io.py  watcher.py
backend/index/: __init__.py  chunker.py  indexer.py  searcher.py
backend/scripts/: seed_demo.py  verify_index.py
backend/tests/: conftest.py  test_agent_pipeline.py  test_api_agents.py  test_api_agents_registry.py  test_api_captures.py  test_api_chat.py  test_api_config.py  test_api_graph.py  test_api_health.py  test_api_index.py  test_api_notes.py  test_api_search.py  test_api_settings.py  test_api_tree.py  test_api_vaults.py  test_base_agent.py  test_chain.py  test_changelog.py  test_chat.py  test_chunker.py  test_custom_agent.py  test_file_locks.py  test_graph.py  test_graph_state.py  test_indexer.py  test_loom_agents.py  test_memory.py  test_notes.py  test_pipeline_e2e.py  test_pipeline_idempotency.py  test_providers.py  test_rate_limit.py  test_searcher.py  test_security.py  test_shuttle_agents.py  test_vault.py  test_vault_io.py  test_watcher.py  test_weaver.py
(+250 files in other folders)
