[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "loom-backend"
version = "0.1.0"
description = "Loom — local-first AI memory system"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "pyyaml>=6.0",
    "uvicorn[standard]>=0.30",
    "watchdog>=4.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
]

[tool.hatch.build.targets.wheel]
packages = ["api", "agents", "compiler", "index", "rules", "bridge", "core"]
